# workshop_package

./: CMakeLists.txt  package.xml
launch/: example_state_pub.launch  gmapping.launch  navigation.launch  pub_sub_str.launch
meshes/: left_shoulder.stl  left_shoulder_2.stl  lower_arm.stl  mid_arm.stl  neck_base.stl  right_shoulder.stl  right_shoulder_2.stl  upper_arm_left.stl  upper_arm_right.stl
param/: costmap_global.yaml  costmap_local.yaml  planner.yaml
rviz_config/: gmapping.rviz  navigation.rviz  urdf.rviz
scripts/: broadcast_tf.py  pub_str.py  publish_joints.py  sub_str.py  tf_read.py
urdf/: avatar_robot.urdf
